Bintray 업로더 플러그인 추가

--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,17 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        // 개인 메이븐 저장소
+        maven { url 'https://dl.bintray.com/boxresin/maven' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Bintray 업로더
+        classpath 'boxresin.gradle.plugin:bintray-uploader:1.0.0'
     }
 }
 
